[package]
name = "kuchikiki"
version = "0.8.2"
authors = [
  "Brave Authors",
  "Ralph Giles <rgiles@brave.com>",
  "Simon Sapin <simon.sapin@exyr.org>",
]
license = "MIT"
description = "(口利き) HTML tree manipulation library"
repository = "https://github.com/brave/kuchikiki"
edition = "2018"

[lib]
name = "kuchikiki"

[[bench]]
name = "main_bench"
harness = false

[dependencies]
cssparser = "0.34"
html5ever = "0.35"
indexmap = "2.2.6"
precomputed-hash = "0.1.1"
selectors = "0.26"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"