[package]
name = "tsugiki"
version = "0.9.0-alpha.1"
authors = [
  "Rimi Kanokawa <rimi@rimin.moe>",
  "Ralph Giles <rgiles@brave.com>",
  "Simon Sapin <simon.sapin@exyr.org>",
]
license = "MIT"
description = "(接ぎ木) HTML tree manipulation library"
repository = "https://github.com/brave/kuchikiki"
edition = "2024"

[lib]
name = "tsugiki"

[[bench]]
name = "main_bench"
harness = false

[dependencies]
cssparser = "0.36"
html5ever = "0.38"
indexmap = "2.2.6"
precomputed-hash = "0.1.1"
selectors = "0.35"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"